Updated all other files, included data and tested app via node

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ejbronze/Friend-Finder#readme",
   "dependencies": {
+    "all": "0.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "path": "^0.12.7"
